Fix alignment of images on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -391,10 +391,6 @@ input[type="submit"] {
     min-width: 100px;
     color: white
 }
-#inner_footer {
-    position: relative;
-    left: 0vw
-}
 #socialText {
     margin-top: 23vh
 }
