--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,10 +16,3 @@
     color: $state-danger-text;
   }
 }
-
-@media (max-width: 925px) {
-  #inner_footer {
-    display: none;
-    z-index: 1;
-  }
-}
